# a-puzzle-a-day-solver

./: .gitignore  Cargo.toml  README.md  SOLVER_ALGORITHM.md  package-lock.json  package.json  webpack.config.js
.github/workflows/: build.yml  deploy.yml  qt-client-release.yml
app/: index.ts  style.scss
cli/src/: main.rs
pkg/: index.d.ts  index.js  index_bg.wasm.d.ts  package.json
public/: index.html
public/pkg/: index.js
qt-client/: CMakeLists.txt  boardwidget.cpp  boardwidget.h  build.bat  build.sh  gen_icon.py  main.cpp  mainwindow.cpp  mainwindow.h  readme.txt  solver_ffi.h  solverworker.cpp  solverworker.h
scripts/: serve.js
solver-ffi/: Cargo.toml
solver-ffi/src/: lib.rs
solver/src/: solver.rs
src/: lib.rs
